--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,6 @@
             <artifactId>spring-native</artifactId>
             <version>${spring-native.version}</version>
         </dependency>-->
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -78,6 +77,11 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.4.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
     <!--<dependencyManagement>
         <dependencies>
@@ -90,12 +94,12 @@
             </dependency>
         </dependencies>
     </dependencyManagement>-->
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.5</version>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -172,5 +176,4 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
-
 </project>
