Adding xml resource file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=cat,EN
+spring.profiles.active=dog,EN
+spring.main.allow-bean-definition-overriding=true
 spring.datasource.url= jdbc:h2:mem:testdb
 DB_CLOSE_DELAY=-1
 
