--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.profiles.active=dog,EN
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.url= jdbc:h2:mem:testdb
 DB_CLOSE_DELAY=-1
+DB_CLOSE_ON_EXIT=FALSE
 
